src/main/java/generated/ReaderParserParser.java
// Generated from /Users/pavel/ITMO/translation-methods/parsers-generator/src/main/java/ReaderParser.g4 by ANTLR 4.7.2
package generated;

import java.util.Map;
import java.util.HashMap;
import java.util.Set;
import java.util.HashSet;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ReaderParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VBAR=1, COLON=2, SEMICOLON=3, OPAREN=4, CPAREN=5, OBRACKET=6, CBRACKET=7, 
		QUESTION=8, PLUS=9, STAR=10, COMMA=11, GRAMMAR=12, HEADER=13, MEMBERS=14, 
		INIT=15, RETURNS=16, RULE=17, TOKEN=18, WSPACE=19, REGEXP=20, ANY=21, 
		CODE=22;
	public static final int
		RULE_start = 0, RULE_parseInput = 1, RULE_inh = 2, RULE_synth = 3, RULE_varDescription = 4, 
		RULE_init = 5, RULE_nonTerminalName = 6, RULE_terminalName = 7, RULE_terminalDescription = 8, 
		RULE_cases = 9, RULE_exprs = 10, RULE_expr = 11, RULE_variableNames = 12, 
		RULE_variableName = 13, RULE_terminal = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "parseInput", "inh", "synth", "varDescription", "init", "nonTerminalName", 
			"terminalName", "terminalDescription", "cases", "exprs", "expr", "variableNames", 
			"variableName", "terminal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'|'", "':'", "';'", "'('", "')'", "'['", "']'", "'?'", "'+'", 
			"'*'", "','", "'grammar'", "'@header'", "'@members'", "'@init'", "'returns'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VBAR", "COLON", "SEMICOLON", "OPAREN", "CPAREN", "OBRACKET", "CBRACKET", 
			"QUESTION", "PLUS", "STAR", "COMMA", "GRAMMAR", "HEADER", "MEMBERS", 
			"INIT", "RETURNS", "RULE", "TOKEN", "WSPACE", "REGEXP", "ANY", "CODE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ReaderParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	public static String termName = "TERM";
	public int cnt = 0;
	public grammar.NonTerminal start;
	public Map<String, grammar.NonTerminal> nonTerminals = new HashMap<>();
	public Map<String, grammar.Terminal> terminals = new HashMap<>();

	static String removeBraces(String codeBlock) {
	   return codeBlock.substring(1, codeBlock.length() - 1).trim();
	}


	public ReaderParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public String title;
		public String header;
		public String members;
		public Token t;
		public Token h;
		public Token m;
		public TerminalNode GRAMMAR() { return getToken(ReaderParserParser.GRAMMAR, 0); }
		public TerminalNode SEMICOLON() { return getToken(ReaderParserParser.SEMICOLON, 0); }
		public ParseInputContext parseInput() {
			return getRuleContext(ParseInputContext.class,0);
		}
		public TerminalNode RULE() { return getToken(ReaderParserParser.RULE, 0); }
		public TerminalNode TOKEN() { return getToken(ReaderParserParser.TOKEN, 0); }
		public TerminalNode HEADER() { return getToken(ReaderParserParser.HEADER, 0); }
		public TerminalNode MEMBERS() { return getToken(ReaderParserParser.MEMBERS, 0); }
		public List<TerminalNode> CODE() { return getTokens(ReaderParserParser.CODE); }
		public TerminalNode CODE(int i) {
			return getToken(ReaderParserParser.CODE, i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReaderParserListener ) ((ReaderParserListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReaderParserListener ) ((ReaderParserListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			match(GRAMMAR);
			setState(31);
			((StartContext)_localctx).t = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==RULE || _la==TOKEN) ) {
				((StartContext)_localctx).t = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(32);
			match(SEMICOLON);
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==HEADER) {
				{
				setState(33);
				match(HEADER);
				setState(34);
				((StartContext)_localctx).h = match(CODE);
				}
			}

			setState(39);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MEMBERS) {
				{
				setState(37);
				match(MEMBERS);
				setState(38);
				((StartContext)_localctx).m = match(CODE);
				}
			}

			setState(41);
			parseInput();

			        ((StartContext)_localctx).title =  ((((StartContext)_localctx).t!=null?((StartContext)_localctx).t.getText():null) == null) ? "" : (((StartContext)_localctx).t!=null?((StartContext)_localctx).t.getText():null);
			        ((StartContext)_localctx).header =  ((((StartContext)_localctx).h!=null?((StartContext)_localctx).h.getText():null) == null) ? "" : removeBraces((((StartContext)_localctx).h!=null?((StartContext)_localctx).h.getText():null));
			        ((StartContext)_localctx).members =  ((((StartContext)_localctx).m!=null?((StartContext)_localctx).m.getText():null) == null) ? "" : removeBraces((((StartContext)_localctx).m!=null?((StartContext)_localctx).m.getText():null));
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParseInputContext extends ParserRuleContext {
		public NonTerminalNameContext nt;
		public TerminalNameContext t;
		public TerminalNode COLON() { return getToken(ReaderParserParser.COLON, 0); }
		public CasesContext cases() {
			return getRuleContext(CasesContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(ReaderParserParser.SEMICOLON, 0); }
		public ParseInputContext parseInput() {
			return getRuleContext(ParseInputContext.class,0);
		}
		public NonTerminalNameContext nonTerminalName() {
			return getRuleContext(NonTerminalNameContext.class,0);
		}
		public InhContext inh() {
			return getRuleContext(InhContext.class,0);
		}
		public TerminalNode RETURNS() { return getToken(ReaderParserParser.RETURNS, 0); }
		public SynthContext synth() {
			return getRuleContext(SynthContext.class,0);
		}
		public InitContext init() {
			return getRuleContext(InitContext.class,0);
		}
		public TerminalDescriptionContext terminalDescription() {
			return getRuleContext(TerminalDescriptionContext.class,0);
		}
		public TerminalNameContext terminalName() {
			return getRuleContext(TerminalNameContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ReaderParserParser.EOF, 0); }
		public ParseInputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseInput; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReaderParserListener ) ((ReaderParserListener)listener).enterParseInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReaderParserListener ) ((ReaderParserListener)listener).exitParseInput(this);
		}
	}

	public final ParseInputContext parseInput() throws RecognitionException {
		ParseInputContext _localctx = new ParseInputContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_parseInput);
		int _la;
		try {
			setState(67);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RULE:
				enterOuterAlt(_localctx, 1);
				{
				setState(44);
				((ParseInputContext)_localctx).nt = nonTerminalName();
				setState(46);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==OBRACKET) {
					{
					setState(45);
					inh(((ParseInputContext)_localctx).nt.elem);
					}
				}

				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==RETURNS) {
					{
					setState(48);
					match(RETURNS);
					setState(49);
					synth(((ParseInputContext)_localctx).nt.elem);
					}
				}

				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INIT) {
					{
					setState(52);
					init(((ParseInputContext)_localctx).nt.elem);
					}
				}

				setState(55);
				match(COLON);
				setState(56);
				cases(((ParseInputContext)_localctx).nt.elem);
				setState(57);
				match(SEMICOLON);
				setState(58);
				parseInput();
				}
				break;
			case TOKEN:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				((ParseInputContext)_localctx).t = terminalName();
				setState(61);
				match(COLON);
				setState(62);
				terminalDescription(((ParseInputContext)_localctx).t.elem);
				setState(63);
				match(SEMICOLON);
				setState(64);
				parseInput();
				}
				break;
			case EOF:
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				match(EOF);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InhContext extends ParserRuleContext {
		public grammar.Element elem;
		public VarDescriptionContext v;
		public TerminalNode OBRACKET() { return getToken(ReaderParserParser.OBRACKET, 0); }
		public TerminalNode CBRACKET() { return getToken(ReaderParserParser.CBRACKET, 0); }
		public List<VarDescriptionContext> varDescription() {
			return getRuleContexts(VarDescriptionContext.class);
		}
		public VarDescriptionContext varDescription(int i) {
			return getRuleContext(VarDescriptionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ReaderParserParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ReaderParserParser.COMMA, i);
		}
		public InhContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public InhContext(ParserRuleContext parent, int invokingState, grammar.Element elem) {
			super(parent, invokingState);
			this.elem = elem;
		}
		@Override public int getRuleIndex() { return RULE_inh; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReaderParserListener ) ((ReaderParserListener)listener).enterInh(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReaderParserListener ) ((ReaderParserListener)listener).exitInh(this);
		}
	}

	public final InhContext inh(grammar.Element elem) throws RecognitionException {
		InhContext _localctx = new InhContext(_ctx, getState(), elem);
		enterRule(_localctx, 4, RULE_inh);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(OBRACKET);
			setState(70);
			((InhContext)_localctx).v = varDescription();
			 _localctx.elem.addInherited(((InhContext)_localctx).v.type, ((InhContext)_localctx).v.name); 
			setState(78);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(72);
					match(COMMA);
					setState(73);
					((InhContext)_localctx).v = varDescription();
					 _localctx.elem.addInherited(((InhContext)_localctx).v.type, ((InhContext)_localctx).v.name); 
					}
					} 
				}
				setState(80);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			setState(81);
			match(CBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SynthContext extends ParserRuleContext {
		public grammar.Element elem;
		public VarDescriptionContext v;
		public TerminalNode OBRACKET() { return getToken(ReaderParserParser.OBRACKET, 0); }
		public TerminalNode CBRACKET() { return getToken(ReaderParserParser.CBRACKET, 0); }
		public VarDescriptionContext varDescription() {
			return getRuleContext(VarDescriptionContext.class,0);
		}
		public SynthContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public SynthContext(ParserRuleContext parent, int invokingState, grammar.Element elem) {
			super(parent, invokingState);
			this.elem = elem;
		}
		@Override public int getRuleIndex() { return RULE_synth; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReaderParserListener ) ((ReaderParserListener)listener).enterSynth(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReaderParserListener ) ((ReaderParserListener)listener).exitSynth(this);
		}
	}

	public final SynthContext synth(grammar.Element elem) throws RecognitionException {
		SynthContext _localctx = new SynthContext(_ctx, getState(), elem);
		enterRule(_localctx, 6, RULE_synth);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(OBRACKET);
			setState(84);
			((SynthContext)_localctx).v = varDescription();
			 _localctx.elem.setSynthesizedAttribute(((SynthContext)_localctx).v.type, ((SynthContext)_localctx).v.name); 
			setState(86);
			match(CBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDescriptionContext extends ParserRuleContext {
		public String type;
		public String name;
		public Token t;
		public Token n;
		public List<TerminalNode> TOKEN() { return getTokens(ReaderParserParser.TOKEN); }
		public TerminalNode TOKEN(int i) {
			return getToken(ReaderParserParser.TOKEN, i);
		}
		public List<TerminalNode> RULE() { return getTokens(ReaderParserParser.RULE); }
		public TerminalNode RULE(int i) {
			return getToken(ReaderParserParser.RULE, i);
		}
		public VarDescriptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDescription; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReaderParserListener ) ((ReaderParserListener)listener).enterVarDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReaderParserListener ) ((ReaderParserListener)listener).exitVarDescription(this);
		}
	}

	public final VarDescriptionContext varDescription() throws RecognitionException {
		VarDescriptionContext _localctx = new VarDescriptionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_varDescription);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			((VarDescriptionContext)_localctx).t = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==RULE || _la==TOKEN) ) {
				((VarDescriptionContext)_localctx).t = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(89);
			((VarDescriptionContext)_localctx).n = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==RULE || _la==TOKEN) ) {
				((VarDescriptionContext)_localctx).n = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}

			        ((VarDescriptionContext)_localctx).type =  (((VarDescriptionContext)_localctx).t!=null?((VarDescriptionContext)_localctx).t.getText():null);
			        ((VarDescriptionContext)_localctx).name =  (((VarDescriptionContext)_localctx).n!=null?((VarDescriptionContext)_localctx).n.getText():null);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InitContext extends ParserRuleContext {
		public grammar.NonTerminal nt;
		public Token code;
		public TerminalNode INIT() { return getToken(ReaderParserParser.INIT, 0); }
		public TerminalNode CODE() { return getToken(ReaderParserParser.CODE, 0); }
		public InitContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public InitContext(ParserRuleContext parent, int invokingState, grammar.NonTerminal nt) {
			super(parent, invokingState);
			this.nt = nt;
		}
		@Override public int getRuleIndex() { return RULE_init; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReaderParserListener ) ((ReaderParserListener)listener).enterInit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReaderParserListener ) ((ReaderParserListener)listener).exitInit(this);
		}
	}

	public final InitContext init(grammar.NonTerminal nt) throws RecognitionException {
		InitContext _localctx = new InitContext(_ctx, getState(), nt);
		enterRule(_localctx, 10, RULE_init);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(INIT);
			setState(93);
			((InitContext)_localctx).code = match(CODE);

			       if ((((InitContext)_localctx).code!=null?((InitContext)_localctx).code.getText():null) == null) {
			           nt.setInit("");
			       } else {
			           nt.setInit(removeBraces((((InitContext)_localctx).code!=null?((InitContext)_localctx).code.getText():null)));
			       }
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NonTerminalNameContext extends ParserRuleContext {
		public grammar.NonTerminal elem;
		public Token ruleName;
		public TerminalNode RULE() { return getToken(ReaderParserParser.RULE, 0); }
		public NonTerminalNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nonTerminalName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReaderParserListener ) ((ReaderParserListener)listener).enterNonTerminalName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReaderParserListener ) ((ReaderParserListener)listener).exitNonTerminalName(this);
		}
	}

	public final NonTerminalNameContext nonTerminalName() throws RecognitionException {
		NonTerminalNameContext _localctx = new NonTerminalNameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_nonTerminalName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			((NonTerminalNameContext)_localctx).ruleName = match(RULE);

			        String name = (((NonTerminalNameContext)_localctx).ruleName!=null?((NonTerminalNameContext)_localctx).ruleName.getText():null);
			        if (!nonTerminals.containsKey(name)) {
			            nonTerminals.put(name, new grammar.NonTerminal(name));
			            if (nonTerminals.size() == 1) start = nonTerminals.get(name);
			        }

			        ((NonTerminalNameContext)_localctx).elem =  nonTerminals.get(name);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerminalNameContext extends ParserRuleContext {
		public grammar.Terminal elem;
		public Token token;
		public TerminalNode TOKEN() { return getToken(ReaderParserParser.TOKEN, 0); }
		public TerminalNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_terminalName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReaderParserListener ) ((ReaderParserListener)listener).enterTerminalName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReaderParserListener ) ((ReaderParserListener)listener).exitTerminalName(this);
		}
	}

	public final TerminalNameContext terminalName() throws RecognitionException {
		TerminalNameContext _localctx = new TerminalNameContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_terminalName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			((TerminalNameContext)_localctx).token = match(TOKEN);

			        String name = (((TerminalNameContext)_localctx).token!=null?((TerminalNameContext)_localctx).token.getText():null);
			        if (!terminals.containsKey(name)) {
			            terminals.put(name, new grammar.Terminal(name));
			        }
			        ((TerminalNameContext)_localctx).elem =  terminals.get(name);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TerminalDescriptionContext extends ParserRuleContext {
		public grammar.Terminal elem;
		public Token desc;
		public TerminalDescriptionContext tds;
		public TerminalNode ANY() { return getToken(ReaderParserParser.ANY, 0); }
		public TerminalNode VBAR() { return getToken(ReaderParserParser.VBAR, 0); }
		public TerminalDescriptionContext terminalDescription() {
			return getRuleContext(TerminalDescriptionContext.class,0);
		}
		public TerminalNode REGEXP() { return getToken(ReaderParserParser.REGEXP, 0); }
		public TerminalNode TOKEN() { return getToken(ReaderParserParser.TOKEN, 0); }
		public TerminalDescriptionContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public TerminalDescriptionContext(ParserRuleContext parent, int invokingState, grammar.Terminal elem) {
			super(parent, invokingState);
			this.elem = elem;
		}
		@Override public int getRuleIndex() { return RULE_terminalDescription; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ReaderParserListener ) ((ReaderParserListener)listener).enterTerminalDescription(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ReaderParserListener ) ((ReaderParserListener)listener).exitTerminalDescription(this);
		}
	}

	public final TerminalDescriptionContext terminalDescription(grammar.Terminal elem) throws RecognitionException {
		TerminalDescriptionContext _localctx = new TerminalDescriptionContext(_ctx, getState(), elem);
		enterRule(_localctx, 16, RULE_terminalDescription);
		int _la;
		try {
			setState(120);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ANY:
				enterOuterAlt(_localctx, 1);
				{
				setState(102);
				((TerminalDescriptionContext)_localctx).desc = match(ANY);
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==VBAR) {
					{
					setState(103);
					match(VBAR);
					setState(104);
					((TerminalDescriptionContext)_localctx).tds = terminalDescription(_localctx.elem);
					}
				}


				        _localctx.elem.addStr(removeBraces((((TerminalDescriptionContext)_localctx).desc!=null?((TerminalDescriptionContext)_localctx).desc.getText():null)));
				    
				}
				break;
			case REGEXP:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				((TerminalDescriptionContext)_localctx).desc = match(REGEXP);
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==VBAR) {
					{
					setState(109);
					match(VBAR);
					setState(110);
					((TerminalDescriptionContext)_localctx).tds = terminalDescription(_localctx.elem);
					}
				}


				        _localctx.elem.addRegex((((TerminalDescriptionContext)_localctx).desc!=null?((TerminalDescriptionContext)_localctx).desc.getText():null));
				    
				}
				break;
			case TOKEN:
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				((TerminalDescriptionContext)_localctx).desc = match(TOKEN);
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==VBAR) {
					{
					setState(115);
					match(VBAR);
					setState(116);
					((TerminalDescriptionContext)_localctx).tds = terminalDescription(_localctx.elem);
					}
				}


				        if (terminals.containsKey((((TerminalDescriptionContext)_localctx).desc!=null?((TerminalDescriptionContext)_localctx).desc.getText():null))) {
				            grammar.Terminal t = terminals.get((((TerminalDescriptionContext)_localctx).desc!=null?((TerminalDescriptionContext)_localctx).desc.getText():null));
				            _localctx.elem.addAll(t.str);
				            _localctx.elem.addAllRegex(t.regex);
				        }
				    
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
